# yohou-nixtla

./: .copier-answers.yml  .git-cliff.toml  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  conftest.py  justfile  mkdocs.yml  noxfile.py  pyproject.toml
.claude/skills/diataxis-notebook-writer/: SKILL.md
.claude/skills/diataxis-reference-writer/: SKILL.md
.claude/skills/update-from-template/: SKILL.md
.claude/skills/update-from-template/references/: conflict-resolution.md  file-classification.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml  feature_request.yml
.github/workflows/: changelog.yml  commit-message.yml  nightly.yml  publish-release.yml  tests.yml
docs/: _api_pages.py  _markdown_export.py  _notebooks.py  hooks.py  index.md
docs/material/templates/python/material/: class.html.jinja  docstring.html.jinja  function.html.jinja
docs/material/templates/python/material/docstring/: admonition.html.jinja  attributes.html.jinja  examples.html.jinja  parameters.html.jinja  raises.html.jinja  returns.html.jinja
docs/pages/: api-reference.md  contributing.md  examples.md  getting-started.md  user-guide.md
docs/pages/examples/: index.md
docs/pages/explanation/: concepts.md  index.md
docs/pages/how-to/: choose-forecaster.md  configure.md  contribute.md  exogenous-features.md  index.md  integrate-sklearn.md  integrate-yohou.md  panel-data.md  troubleshooting.md
docs/pages/reference/: api.md  changelog.md  glossary.md  index.md
docs/pages/tutorials/: examples.md  getting-started.md  index.md
docs/stylesheets/: gallery.css  theme.css
docs_build/: _api_pages.py  _git_ref.py  _glossary.py  _markdown_export.py  _markers.py  _notebooks.py  _references.py  _see_also.py  _source_links.py  build.py  serve.py
examples/: hello.py  model_comparison.py  panel_data.py
src/yohou_nixtla/: __init__.py  _base.py  _conversion.py  hello.py
src/yohou_nixtla/neural/: __init__.py  _base.py  _forecasters.py
src/yohou_nixtla/stats/: __init__.py  _base.py  _forecasters.py
tests/: conftest.py  test_conversion.py  test_examples.py  test_exogenous.py  test_hello.py  test_neural.py  test_stats.py
